@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="1.1.4" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="1.1.5" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="1.2.5" />
+		<import addon="script.module.tulip" version="1.2.6" />
 		<import addon="plugin.video.youtube" version="5.4.0" optional="true" />
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
@@ -20,7 +20,14 @@
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
 		<news>
+[B]1.1.5[/B]
+- Added spoofed UA for live streams
+
 [B]1.1.4[/B]
+- Code cosmetics
+
+[B]1.1.3[/B]
+- Minor regex fix on live resolver
 - Code cosmetics
 
 [B]1.1.2[/B]
